migre de dolares a pesos, elimine el rango de perdida de 97 mil, arregle el nodal de bloqueo

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 type="number"
                 id="betAmount"
                 class="form-control bet-input"
-                value="1"
-                min="1"
-                max="10"
+                value="1000"
+                min="1000"
+                max="5000"
               />
               <button id="doubleBet" class="btn bet-btn">2×</button>
             </div>
@@ -78,7 +78,7 @@
         <div class="info-grid">
           <div class="info-item">
             <span class="info-label">Balance:</span>
-            <span class="info-value" id="balance">$1000</span>
+            <span class="info-value" id="balance">$50.000</span>
           </div>
           <div class="info-item">
             <span class="info-label">Apuesta:</span>
@@ -105,7 +105,7 @@
         <h4>Instrucciones:</h4>
         <ul>
           <li>Selecciona la cantidad de minas (3, 4 o 5)</li>
-          <li>Apuesta maxima 4$</li>
+          <li>Apuesta máxima $5.000</li>
           <li>Establece tu apuesta usando los botones ½ y 2×</li>
           <li>Haz clic en "Iniciar Juego" para comenzar</li>
           <li>Haz clic en las casillas para descubrir diamantes 💎</li>
@@ -124,7 +124,7 @@
           <h2>🎉 ¡Felicidades!</h2>
         </div>
         <div class="modal-body">
-          <p>Has alcanzado el límite máximo de <strong>$40</strong></p>
+          <p>Has alcanzado el límite máximo de <strong>$100.000</strong></p>
           <p>El juego se bloqueará y será redirigido al inicio automáticamente.</p>
           <div class="countdown-display">
             <span>Redirigiendo en: </span>
